# neat_opinion_network

./: .gitignore  DeGrootModel.ipynb  Makefile  README.md  citation_network.ipynb  citation_network_statistics.ipynb  combine_author_paper_networks.ipynb  create_citation_dataset.ipynb  create_citation_network.ipynb  demo.ipynb  experiments.ipynb  experiments.py  guidebook_adding_paper_embeddings.ipynb  pyproject.toml  read_networks.py  requirements.txt  susceptibility_experiments.ipynb  utils.py
.ipynb_checkpoints/: DeGrootModel-checkpoint.ipynb  experiments-checkpoint.ipynb
data/History/: citation_lcc.edgelist  simplified_ssn_author_ref_combined.csv  ssn_author_ref_combined.csv  ssn_paper_refs.csv
