[tool.poetry]
name = "class-network"
version = "0.1.0"
description = ""
authors = ["Keigo Kusumegi <kusukun7@gmail.com>"]
readme = "README.md"
packages = [{include = "class_network"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
networkx = "^3.2.1"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
jupyterlab = "^4.0.8"
scipy = "^1.11.3"
polars = "^0.19.13"
powerlaw = "^1.5"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
